examples/fail/semantic/bad_main_params.bina
// EXPECT_SEMANTIC_ERROR: function 'main' must not have parameters
fn main(argc: int32) -> int {
    return argc;
}
